Remove famfamfam icons as we no longer need them; Hide overflowing text behind emblems

--- a/app/css/views.index.css
+++ b/app/css/views.index.css
@@ -35,6 +35,7 @@
   top: 0;
   right: 0;
   padding: 0 0 0 5px;
+  background-color: #ffffff;
 }
 #stories li .emblems span.label {
   font-weight: normal;
@@ -47,6 +48,9 @@
 #stories li:hover, #stories li:hover > a {
   background-color: #000000;
   color: #ffffff;
+}
+ #stories li:hover .emblems {
+  background-color: #000000;
 }
 
 #story-progress {
